frontend: fixed center overflow for vertical images, disable scroll on prompt filtering

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -201,7 +201,7 @@ input[type="submit"] {
     flex-grow: 1;
 
     width: 100%;
-    height: 100%;
+    height: calc(100% - 5em);
 }
 
 img#content {
